--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <h2 style="color: #ff69b4; text-align: left; margin-bottom: 20px;">To Gudiya</h2>
             <div class="love-letter-text">
                 <p style="color: #ff69b4; font-style: italic;">My dearest maalik,</p>
-                <p>just wanna say surry yar evrything is temperory but my fat shaming towards you is permanent 😋.</p>
+                <p>just wanna say saurry yar evrything is temperory but my fat shaming towards you is permanent 😋.</p>
                 <p style="text-align: right; color: #ff69b4; margin-top: 20px; font-weight: 600;">Forever yours 💕</p>
             </div>
             <button class="pink-button" onclick="goToScreen('playlist-screen', this)">Continue It ✨</button>
@@ -758,4 +758,5 @@
         };
     </script>
 </body>
+
 </html>
